rns-lang/tests/snapshots/lexer-integers-invalid_negative_format.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
.code -5xyz

----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ test_data/integration/lexer/integers/invalid_negative_format.ja:2:7 ]
   │
 2 │ .code -5xyz
   │       ──┬──  
   │         ╰──── '-5xyz' is not a valid integer
   │ 
   │ Note: Expected a valid integer number.
───╯
